# distributedSpMV

./: .gitignore  CMakeLists.txt  Makefile  README
log/: Makefile  format.cpp
matrix/: counter.cpp  decompress.sh  download.sh  gen.cpp  generator.cpp  txt2binary.cpp
matrix/test/: Makefile  generate.sh  generator.cpp  job.sh  visualizer.cpp
partition/: Makefile  du-list-h  du-list-s  format_stat.cpp  format_summary.sh  hash-hypergraph  hash-simple  list  list-h  list-s
script/: copy-log.sh  copy-part.sh  generate-cpu-batch.sh  generate.sh  generate_cpu_hypergraph.sh  generate_cpu_simple.sh  generate_mic_hypergraph.sh  generate_mic_simple.sh  partition.sh  partition_parallel.sh  partition_parallel_coma.sh  partition_single.sh  partition_single_coma.sh  run.sh  run_p4.sh  run_specific.sh  transfer.sh
script/coma/: coma_env.sh  generate.sh  generate_cpu.sh  generate_cpu_hypergraph.sh  generate_cpu_simple.sh  generate_mic.sh  generate_mic_hypergraph.sh  generate_mic_simple.sh  numarun.sh
script/coma/test/: generate.sh  generate_cpu.sh  generate_mic.sh
script/hapacs/: generate.sh  generate_cpu.sh  generate_cpu_hypergraph.sh  generate_cpu_simple.sh  generate_gpu.sh  generate_gpu_hypergraph.sh  generate_gpu_simple.sh  numarun.sh
script/hostname/: mpi_util.cpp  myhostname  myhostname.cpp  myhostname.mic
script/partition/: partition_parallel.sh  partition_parallel_coma.sh  partition_parallel_coma_test.sh  partition_parallel_hapacs.sh  partition_parallel_test.sh  partition_single.sh  partition_single_coma.sh
script/sample/: coma-host.sh  coma-mic-native-test.sh  coma-test.sh  copy-part.sh  hello.cpp
src/: SparseMatrix.h  Vector.h  main.cpp  matrix2hypergraph.cpp  matrix_to_hypergraph.cpp  mpi_util.cpp  mpi_util.h  mpi_util.hpp  partition.cpp  sparse_matrix.h  spmv.cpp  spmv.h  spmv_kernel.cpp  spmv_kernel.h  timing.h  type.hpp  util.cpp  util.h  util.hpp  vector.h
test/: comm-calc.cpp  comm_calc.sh  omp.cpp  zero-net.cpp
test/barrier/: Makefile  barrier.cpp  benchmark_job.sh
test/comm-calc/: comm-calc.cpp
test/hello/: hello  hello.cpp  hello.mic  hello.sh
