# CMake variable
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_CXX_COMPILER "/usr/bin/g++")
SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3")
SET(CMAKE_CXX_FLAGS_DEBUG "-Wall -g")
SET(CMAKE_BUILD_TYPE DEBUG)
PROJECT(distributedSpMV)

# User variable
SET(INCLUDE_PATH "include")
SET(LIBRARY_PATH "lib")
SET(BINARY_PATH bin)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_PATH})
INCLUDE_DIRECTORIES(${INCLUDE_PATH})
LINK_DIRECTORIES(${LIBRARY_PATH})

# TARGET = partition
SET(TARGET partition)
SET(SOURCE src/partition.cpp)
SET(LIBRARY patoh)
ADD_EXECUTABLE(${TARGET} ${SOURCE})
TARGET_LINK_LIBRARIES(${TARGET} ${LIBRARY})


